fixed spacing for mobile on exec page

--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -86,6 +86,7 @@ body {
 .card{
     padding: 10px;
     background-color: rgba(255,255,255,0.6);
+    margin-bottom:10px;
 }
 
 .card-img{
